# project-semantic-release

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  action.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: commitlint.config.js  main.yml  pr.yml  push_to_registry.yml  stale.yml
semantic_release/: __init__.py  cfg_loader.py  ci_checks.py  cli.py  defaults.cfg  dist.py  errors.py  helpers.py  hvcs.py  repository.py  settings.py  vcs_helpers.py
semantic_release/changelog/: __init__.py  changelog.py  compare.py  handlers.py
semantic_release/history/: __init__.py  grouping.py  logs.py  parser_angular.py  parser_emoji.py  parser_helpers.py  parser_scipy.py  parser_tag.py  processing.py
semantic_release/history/parser_gitmoji/: __init__.py  data.py  parser_gitmojis.py
semantic_release/templates/: gitmoji_template.tpl  template.tpl  with_sections_template.tpl
tests/: __init__.py  test_changelog.py  test_cli.py  test_dist.py  test_handlers.py  test_hvcs.py  test_repository.py  test_settings.py  test_vcs_helpers.py
tests/history/: __init__.py  test_changelog.py  test_grouping.py  test_version.py  test_version_bump.py
tests/mocks/: mock_gitlab.py
tests/parsers/: conftest.py  test_angular.py  test_emoji.py  test_gitmoji.py  test_helpers.py  test_scipy.py  test_tag.py
